--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "App\\": "src/"
         }
     },
+    "scripts": {
+          "start": "php -S 0.0.0.0:7000 -t public"
+    },
     "authors": [
         {
             "name": "Wanderlei Silva do Carmo",
